--- a/Cirquitry_Project/Config/DefaultEngine.ini
+++ b/Cirquitry_Project/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/CirquitryContent/Scenes/Testing.Testing
 EditorStartupMap=/Game/CirquitryContent/Scenes/Testing.Testing
+GameInstanceClass=/Game/Instance/GI_GameInstance.GI_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
