Set Up widget controllers, before changing the player and enemy character into game manager

--- a/Cirquitry_Project/Config/DefaultEngine.ini
+++ b/Cirquitry_Project/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/CirquitryContent/Scenes/Testing.Testing
 EditorStartupMap=/Game/CirquitryContent/Scenes/Testing.Testing
 GameInstanceClass=/Game/Instance/GI_GameInstance.GI_GameInstance_C
+GlobalDefaultGameMode=/Game/Blueprint/Game/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
