Gameplay tags added to a DT_DescriptionsDataTable

--- a/Cirquitry_Project/Config/DefaultGameplayTags.ini
+++ b/Cirquitry_Project/Config/DefaultGameplayTags.ini
@@ -12,4 +12,10 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.PreCombat.Character",DevComment="The player\'s selected character")
 +GameplayTagList=(Tag="Attributes.PreCombat.Wealth",DevComment="The players current wealth/gold")
++GameplayTagList=(Tag="Description.Characters.Gilded",DevComment="A mage specialized in accumulating wealth and casting spells based on wealth")
++GameplayTagList=(Tag="Description.Functions.SparkingFlame",DevComment="Shoots a bolt of fire at the enemy that deals 8-10 fire damage")
++GameplayTagList=(Tag="Description.Inscriptions.SlotAffixion",DevComment="Adds 1 slot to a spell circle")
++GameplayTagList=(Tag="Description.Items.FireCharm",DevComment="A charm that reduces damage taken from fire attacks by 25% when equipped")
++GameplayTagList=(Tag="Description.Modifiers.Blaze",DevComment="Modifies a fire spell to deal 3 extra fire damage")
++GameplayTagList=(Tag="Description.Origins.Igni",DevComment="Fire based spells have 15% more crit chance")
 
