Set up description widget

--- a/Cirquitry_Project/Config/DefaultGameplayTags.ini
+++ b/Cirquitry_Project/Config/DefaultGameplayTags.ini
@@ -7,7 +7,8 @@ AllowGameTagUnloading=False
 FastReplication=False
 bDynamicReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagTableList=/Game/Blueprint/AbilitySystem/GameplayTags/DT_PreCombat.DT_PreCombat
++GameplayTagTableList=/Game/Blueprint/AbilitySystem/GameplayTags/DT_PreCombatAttributes.DT_PreCombatAttributes
++GameplayTagRedirects=(OldTagName="Description",NewTagName="Equip")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.PreCombat.Character",DevComment="The player\'s selected character")
@@ -18,4 +19,37 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Description.Items.FireCharm",DevComment="A charm that reduces damage taken from fire attacks by 25% when equipped")
 +GameplayTagList=(Tag="Description.Modifiers.Blaze",DevComment="Modifies a fire spell to deal 3 extra fire damage")
 +GameplayTagList=(Tag="Description.Origins.Igni",DevComment="Fire based spells have 15% more crit chance")
++GameplayTagList=(Tag="Element.Arcane",DevComment="")
++GameplayTagList=(Tag="Element.Dark",DevComment="")
++GameplayTagList=(Tag="Element.Earth",DevComment="")
++GameplayTagList=(Tag="Element.Fire",DevComment="")
++GameplayTagList=(Tag="Element.Homomancy",DevComment="")
++GameplayTagList=(Tag="Element.Ice",DevComment="")
++GameplayTagList=(Tag="Element.Light",DevComment="")
++GameplayTagList=(Tag="Element.Lightning",DevComment="")
++GameplayTagList=(Tag="Element.Metal",DevComment="")
++GameplayTagList=(Tag="Element.Necrotic",DevComment="")
++GameplayTagList=(Tag="Element.Time",DevComment="")
++GameplayTagList=(Tag="Element.Water",DevComment="")
++GameplayTagList=(Tag="Element.Wind",DevComment="")
++GameplayTagList=(Tag="Element.Wood",DevComment="")
++GameplayTagList=(Tag="Rarity.Ancient",DevComment="Things with the Ancient rarity")
++GameplayTagList=(Tag="Rarity.Common",DevComment="Things assigned a common rarity")
++GameplayTagList=(Tag="Rarity.Epic",DevComment="Things with the epic rarity")
++GameplayTagList=(Tag="Rarity.Legendary",DevComment="Things with the Legendary rarity")
++GameplayTagList=(Tag="Rarity.Rare",DevComment="Things with the rare rarity")
++GameplayTagList=(Tag="Rarity.Uncommon",DevComment="Things with the uncommon rarity")
++GameplayTagList=(Tag="Type.Abjuration",DevComment="")
++GameplayTagList=(Tag="Type.Conjuration",DevComment="A type of magic that specializes in conjuring creatures and abilitys")
++GameplayTagList=(Tag="Type.Demonic",DevComment="")
++GameplayTagList=(Tag="Type.Divination",DevComment="")
++GameplayTagList=(Tag="Type.Divine",DevComment="")
++GameplayTagList=(Tag="Type.Evocation",DevComment="")
++GameplayTagList=(Tag="Type.Glamour",DevComment="")
++GameplayTagList=(Tag="Type.Nature",DevComment="")
++GameplayTagList=(Tag="Type.Necromancy",DevComment="")
++GameplayTagList=(Tag="Type.Psychic",DevComment="A type of magic that specializes in manipulating the mind")
++GameplayTagList=(Tag="Type.Spirit",DevComment="")
++GameplayTagList=(Tag="Type.Time",DevComment="")
++GameplayTagList=(Tag="Type.Transmutation",DevComment="")
 
