--- a/Cirquitry_Project/Config/DefaultGameplayTags.ini
+++ b/Cirquitry_Project/Config/DefaultGameplayTags.ini
@@ -1,3 +1,4 @@
+;METADATA=(Diff=true, UseCommands=true)
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -11,6 +12,8 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="Description",NewTagName="Equip")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Attributes.Combat.Health",DevComment="The players current health")
++GameplayTagList=(Tag="Attributes.Combat.MaxHealth",DevComment="The players max possible health")
 +GameplayTagList=(Tag="Attributes.PreCombat.Character",DevComment="The player\'s selected character")
 +GameplayTagList=(Tag="Attributes.PreCombat.Wealth",DevComment="The players current wealth/gold")
 +GameplayTagList=(Tag="Description.Characters.Gilded",DevComment="A mage specialized in accumulating wealth and casting spells based on wealth")
