--- a/Cirquitry_Project/Config/DefaultGameplayTags.ini
+++ b/Cirquitry_Project/Config/DefaultGameplayTags.ini
@@ -8,14 +8,23 @@ AllowGameTagUnloading=False
 FastReplication=False
 bDynamicReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagTableList=/Game/Blueprint/AbilitySystem/GameplayTags/DT_PreCombatAttributes.DT_PreCombatAttributes
++GameplayTagTableList=/Game/Blueprint/AbilitySystem/Data/DT_PreCombatAttributes.DT_PreCombatAttributes
 +GameplayTagRedirects=(OldTagName="Description",NewTagName="Equip")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Attributes.Combat.CastSpeed",DevComment="The cast speed of the player (100%)")
 +GameplayTagList=(Tag="Attributes.Combat.Health",DevComment="The players current health")
 +GameplayTagList=(Tag="Attributes.Combat.MaxHealth",DevComment="The players max possible health")
 +GameplayTagList=(Tag="Attributes.PreCombat.Character",DevComment="The player\'s selected character")
 +GameplayTagList=(Tag="Attributes.PreCombat.Wealth",DevComment="The players current wealth/gold")
++GameplayTagList=(Tag="Debuffs.Bind",DevComment="Reduces the cast speed of the next cast by a flat percentage")
++GameplayTagList=(Tag="Debuffs.Bleed",DevComment="Deals damage equal to stack count every second")
++GameplayTagList=(Tag="Debuffs.Blight",DevComment="Does damage based on stack count")
++GameplayTagList=(Tag="Debuffs.Blind",DevComment="Reduces accuracy by a percentage")
++GameplayTagList=(Tag="Debuffs.Daze",DevComment="Reduces cast speed by a percentage per stack")
++GameplayTagList=(Tag="Debuffs.Frost",DevComment="When reaching a certain stack count, freeze the player for 3 seconds and consume stacks")
++GameplayTagList=(Tag="Debuffs.Frozen",DevComment="A stack entered at max frost stacks that stuns for a duration")
++GameplayTagList=(Tag="Debuffs.Gloom",DevComment="Increases the damage recieved by 1 per 10 stacks")
 +GameplayTagList=(Tag="Description.Characters.Gilded",DevComment="A mage specialized in accumulating wealth and casting spells based on wealth")
 +GameplayTagList=(Tag="Description.Functions.SparkingFlame",DevComment="Shoots a bolt of fire at the enemy that deals 8-10 fire damage")
 +GameplayTagList=(Tag="Description.Inscriptions.SlotAffixion",DevComment="Adds 1 slot to a spell circle")
