Set Up Attribute Info to take in floats for attribute values

--- a/Cirquitry_Project/Config/DefaultEngine.ini
+++ b/Cirquitry_Project/Config/DefaultEngine.ini
@@ -78,6 +78,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Cirquitry_Project")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Cirquitry_Project")
+AssetManagerClassName=/Script/Cirquitry_Project.Cirquitry_AssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
