Starting CastingCalculation AbilityTask

--- a/Cirquitry_Project/Config/DefaultGameplayTags.ini
+++ b/Cirquitry_Project/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -40,6 +41,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Element.Water",DevComment="")
 +GameplayTagList=(Tag="Element.Wind",DevComment="")
 +GameplayTagList=(Tag="Element.Wood",DevComment="")
++GameplayTagList=(Tag="Event.Montage.SparkingFlame",DevComment="")
 +GameplayTagList=(Tag="Rarity.Ancient",DevComment="Things with the Ancient rarity")
 +GameplayTagList=(Tag="Rarity.Common",DevComment="Things assigned a common rarity")
 +GameplayTagList=(Tag="Rarity.Epic",DevComment="Things with the epic rarity")
